--- a/FEALiTE2D/FEALiTE2D.csproj
+++ b/FEALiTE2D/FEALiTE2D.csproj
@@ -5,11 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Structure\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="CSparse" Version="3.5.0" />
+    <PackageReference Include="MathNet.Numerics" Version="4.15.0" />
   </ItemGroup>
 
 </Project>
