--- a/FEALiTE2D/FEALiTE2D.csproj
+++ b/FEALiTE2D/FEALiTE2D.csproj
@@ -11,6 +11,7 @@
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
 		<EnableNETAnalyzers>false</EnableNETAnalyzers>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 	</PropertyGroup>
 
 	<ItemGroup>
