added new dxf plotter

--- a/FEALiTE2D.Tests/FEALiTE2D.Tests.csproj
+++ b/FEALiTE2D.Tests/FEALiTE2D.Tests.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FEALiTE2D.Plotting\FEALiTE2D.Plotting.csproj" />
     <ProjectReference Include="..\FEALiTE2D\FEALiTE2D.csproj" />
   </ItemGroup>
 
