--- a/FEALiTE2D.Plotting/FEALiTE2D.Plotting.csproj
+++ b/FEALiTE2D.Plotting/FEALiTE2D.Plotting.csproj
@@ -1,24 +1,29 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Authors>Mohamed Salah Ibrahim</Authors>
-    <Description>A plotting library used by FEALiTE2D to plot internal forces diagrams and displacement diagrams for any load case or load combination in a dxf format.</Description>
-    <Copyright>Copyright © 2021 Mohamed Salah Ibrahim Civilms@outlook.com</Copyright>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <RepositoryUrl>https://github.com/FEALiTE/FEALiTE2D</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
-    <PackageTags>engineering analysis beam frame finite-elements finite-element-analysis structural-engineering structural-analysis finite-element-methods civil-engineering truss 2d-frame structral DXF CAD</PackageTags>
-    <PackageProjectUrl>https://github.com/FEALiTE/FEALiTE2D</PackageProjectUrl>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFrameworks>net45;netstandard2.0;net8.0</TargetFrameworks>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<Authors>Mohamed Salah Ibrahim</Authors>
+		<Description>A plotting library used by FEALiTE2D to plot internal forces diagrams and displacement diagrams for any load case or load combination in a dxf format.</Description>
+		<Copyright>Copyright © 2021 Mohamed Salah Ibrahim Civilms@outlook.com</Copyright>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<RepositoryUrl>https://github.com/FEALiTE/FEALiTE2D</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PackageTags>engineering analysis beam frame finite-elements finite-element-analysis structural-engineering structural-analysis finite-element-methods civil-engineering truss 2d-frame structral DXF CAD</PackageTags>
+		<PackageProjectUrl>https://github.com/FEALiTE/FEALiTE2D</PackageProjectUrl>
+		<Version>1.1.2</Version>
+		<PackageReleaseNotes>corrected dxf plotting for inclined elements </PackageReleaseNotes>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<GenerateDocumentationFile>True</GenerateDocumentationFile>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="netDxf.netstandard" Version="2.4.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="netDxf.netstandard" Version="2.4.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\FEALiTE2D\FEALiTE2D.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\FEALiTE2D\FEALiTE2D.csproj" />
+		<None Include="..\README.md" Pack="true" PackagePath="\" />
+	</ItemGroup>
 
 </Project>
